--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -39,6 +39,10 @@
         <item quantity="one">Exclude %d app</item>
         <item quantity="other">Exclude %d apps</item>
     </plurals>
+    <plurals name="persistent_keepalive_seconds_unit">
+        <item quantity="one">every second</item>
+        <item quantity="other">every %d seconds</item>
+    </plurals>
     <string name="use_all_applications">Use all apps</string>
     <string name="add_peer">Add peer</string>
     <string name="addresses">Addresses</string>
@@ -148,9 +152,9 @@
     <string name="permission_label">control WireGuard tunnels</string>
     <string name="persistent_keepalive">Persistent keepalive</string>
     <string name="pre_shared_key">Pre-shared key</string>
+    <string name="pre_shared_key_enabled">enabled</string>
     <string name="private_key">Private key</string>
     <string name="public_key">Public key</string>
-    <string name="public_key_description">Public key</string>
     <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_summary_off">Will not bring up enabled tunnels at boot</string>
     <string name="restore_on_boot_summary_on">Will bring up enabled tunnels at boot</string>
