strings: sync translations
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/values-de/strings.xml
+++ b/ui/src/main/res/values-de/strings.xml
@@ -25,7 +25,7 @@
         <item quantity="other">%d ausgeschlossene Anwendungen</item>
     </plurals>
     <plurals name="set_included_applications">
-        <item quantity="one">%d ausgeschlossene Anwendung</item>
+        <item quantity="one">%d einbezogene Anwendung</item>
         <item quantity="other">%d einbezogene Anwendungen</item>
     </plurals>
     <plurals name="n_excluded_applications">
@@ -53,18 +53,18 @@
     </plurals>
     <plurals name="persistent_keepalive_seconds_suffix">
         <item quantity="one">Sekunde</item>
-        <item quantity="other">Sekunde</item>
+        <item quantity="other">Sekunden</item>
     </plurals>
     <string name="use_all_applications">Alle Apps verwenden</string>
     <string name="add_peer">Teilnehmer hinzufügen</string>
     <string name="addresses">Adressen</string>
-    <string name="applications">Applikationen</string>
+    <string name="applications">Anwendungen</string>
     <string name="allow_remote_control_intents_summary_off">Externe Apps dürfen keine Tunnel umschalten (empfohlen)</string>
     <string name="allow_remote_control_intents_summary_on">Externe Apps dürfen Tunnel umschalten (erweitert)</string>
     <string name="allow_remote_control_intents_title">Erlaube Steuerung über externe Apps</string>
     <string name="allowed_ips">Erlaubte IPs</string>
     <string name="app_name">WireGuard</string>
-    <string name="bad_config_context">%1$ss %2$s</string>
+    <string name="bad_config_context">%2$s des %1$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s in %2$s</string>
     <string name="bad_config_explanation_pka">: Muss positiv sein und nicht größer als 65535</string>
@@ -73,8 +73,8 @@
     <string name="bad_config_reason_invalid_key">Ungültiger Schlüssel</string>
     <string name="bad_config_reason_invalid_number">Ungültige Zahl</string>
     <string name="bad_config_reason_invalid_value">Ungültiger Wert</string>
-    <string name="bad_config_reason_missing_attribute">Attribut fehlt</string>
-    <string name="bad_config_reason_missing_section">Fehlende Sektion</string>
+    <string name="bad_config_reason_missing_attribute">Fehlendes Attribut</string>
+    <string name="bad_config_reason_missing_section">Fehlender Abschnitt</string>
     <string name="bad_config_reason_syntax_error">Syntaxfehler</string>
     <string name="bad_config_reason_unknown_attribute">Unbekanntes Attribut</string>
     <string name="bad_config_reason_unknown_section">Unbekannter Abschnitt</string>
@@ -89,22 +89,22 @@
     <string name="config_save_error">Konfiguration für „%1$s“ kann nicht gespeichert werden: %2$s</string>
     <string name="config_save_success">Konfiguration für „%s ” erfolgreich gespeichert</string>
     <string name="create_activity_title">WireGuard-Tunnel erstellen</string>
-    <string name="create_bin_dir_error">Lokales Anwendungsverzeichnis konnte nicht erstellt werden</string>
-    <string name="create_downloads_file_error">Datei konnte im Download-Verzeichnis nicht erstellt werden</string>
+    <string name="create_bin_dir_error">Lokales Anwendungsverzeichnis kann nicht erstellt werden</string>
+    <string name="create_downloads_file_error">Datei kann im Download-Verzeichnis nicht erstellt werden</string>
     <string name="create_empty">Neu erstellen</string>
     <string name="create_from_file">Aus Datei oder Archiv importieren</string>
-    <string name="create_from_qr_code">Vom QR-Code scannen</string>
+    <string name="create_from_qr_code">Von QR-Code scannen</string>
     <string name="create_output_dir_error">Konnte das Ausgabeverzeichnis nicht erstellen</string>
-    <string name="create_temp_dir_error">Lokales temporäres Verzeichnis konnte nicht erstellt werden</string>
+    <string name="create_temp_dir_error">Lokales temporäres Verzeichnis kann nicht erstellt werden</string>
     <string name="create_tunnel">Tunnel erstellen</string>
-    <string name="dark_theme_summary_off">Helles (Tag) Design in Verwendung</string>
-    <string name="dark_theme_summary_on">Dunkles (Nacht) Design in Verwendung</string>
+    <string name="dark_theme_summary_off">Verwende helles Design (Tag)</string>
+    <string name="dark_theme_summary_on">Verwende dunkles Design (Nacht)</string>
     <string name="dark_theme_title">Dunkles Design verwenden</string>
     <string name="delete">Entfernen</string>
     <string name="dns_servers">DNS-Server</string>
     <string name="edit">Bearbeiten</string>
     <string name="endpoint">Endpunkt</string>
-    <string name="error_down">Fehler beim Herunterfahren des Tunnels: %s</string>
+    <string name="error_down">Fehler beim Abschalten des Tunnels: %s</string>
     <string name="error_fetching_apps">Fehler beim Abrufen der App-Liste: %s</string>
     <string name="error_root">Bitte root-Zugriff anfordern und erneut versuchen</string>
     <string name="error_up">Fehler beim Starten des Tunnels: %s</string>
@@ -120,38 +120,38 @@
     <string name="import_error">Kann Tunnel nicht importieren: %s</string>
     <string name="import_from_qr_code">Tunnel aus QR-Code importieren</string>
     <string name="import_success">„%s” importiert</string>
-    <string name="interface_title">Schnittstelle</string>
-    <string name="key_contents_error">Falsche Zeichen in Schlüssel</string>
+    <string name="interface_title">Interface</string>
+    <string name="key_contents_error">Unzulässige Zeichen im Schlüssel</string>
     <string name="key_length_error">Falsche Schlüssellänge</string>
     <string name="key_length_explanation_base64">: WireGuard base64-Schlüssel müssen 44 Zeichen enthalten (32 Bytes)</string>
     <string name="key_length_explanation_binary">: WireGuard-Schlüssel müssen 32 Bytes groß sein</string>
     <string name="key_length_explanation_hex">: WireGuard Hex-Schlüssel müssen 64 Zeichen (32 Bytes) groß sein</string>
     <string name="listen_port">Eingangs-Port</string>
-    <string name="log_export_error">Fehler beim Exportieren des Logs: %s</string>
-    <string name="log_export_subject">WireGuard Android Log Datei</string>
+    <string name="log_export_error">Konnte Protokoll nicht exportieren: %s</string>
+    <string name="log_export_subject">WireGuard Android Protokolldatei</string>
     <string name="log_export_success">Gespeichert in „%s”</string>
     <string name="log_export_title">Logdatei exportieren</string>
-    <string name="log_saver_activity_label">Log speichern</string>
-    <string name="log_viewer_pref_summary">Logs können beim Debuggen helfen</string>
-    <string name="log_viewer_pref_title">Protokoll der Anwendung anzeigen</string>
-    <string name="log_viewer_title">Loggen</string>
+    <string name="log_saver_activity_label">Protokoll speichern</string>
+    <string name="log_viewer_pref_summary">Protokolle können beim Debuggen helfen</string>
+    <string name="log_viewer_pref_title">Anwendungs-Protokoll anzeigen</string>
+    <string name="log_viewer_title">Protokoll</string>
     <string name="logcat_error">Konnte logcat nicht ausführen: </string>
     <string name="module_disabler_disabled_summary">Das experimentelle Kernelmodul kann die Leistung verbessern</string>
     <string name="module_disabler_disabled_title">Kernelmodul-Backend aktivieren</string>
     <string name="module_disabler_enabled_summary">Das langsamere Userspace-Backend kann die Stabilität verbessern</string>
     <string name="module_disabler_enabled_title">Kernelmodul-Backend deaktivieren</string>
-    <string name="module_installer_error">Es ist etwas schief gelaufen. Bitte versuchen Sie es später erneut</string>
+    <string name="module_installer_error">Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut</string>
     <string name="module_installer_initial">Das experimentelle Kernelmodul kann die Leistung verbessern</string>
     <string name="module_installer_not_found">Für Ihr Gerät sind keine Module verfügbar</string>
     <string name="module_installer_title">Kernelmodul herunterladen und installieren</string>
-    <string name="module_installer_working">Herunterladen und Installieren…</string>
+    <string name="module_installer_working">Lade herunter und installiere…</string>
     <string name="module_version_error">Konnte Version des Kernel-Moduls nicht ermitteln</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_summary_off">Einschalten eines Tunnels wird andere ausschalten</string>
-    <string name="multiple_tunnels_summary_on">Mehrere Tunnel können gleichzeitig aktiviert werden</string>
-    <string name="multiple_tunnels_title">Erlaube mehrere Tunnel gleichzeitig</string>
+    <string name="multiple_tunnels_summary_off">Das einschalten eines Tunnels wird andere ausschalten</string>
+    <string name="multiple_tunnels_summary_on">Mehrere Tunnel können gleichzeitig aktiviert sein</string>
+    <string name="multiple_tunnels_title">Erlaube mehrere gleichzeitige Tunnel</string>
     <string name="name">Name</string>
-    <string name="no_config_error">Versucht einen Tunnel ohne Konfiguration zu starten</string>
+    <string name="no_config_error">Es wurde versucht, einen Tunnel ohne Konfiguration zu starten</string>
     <string name="no_configs_error">Keine Konfigurationen gefunden</string>
     <string name="no_tunnels_error">Keine Tunnel vorhanden</string>
     <string name="parse_error_generic">String (Zeichenkette)</string>
